--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "personal website",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "Gabriel Csapo <gacsapo@paypalcorp.com>",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
+    "grunt-screenshot": "^0.1.0",
     "jade": "^1.11.0",
     "serve-static": "^1.10.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1"
   }
 }
