moves screenshots to folder based on name starts to create structure when writing articles

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "personal website",
   "main": "index.html",
-  "scripts": {},
+  "scripts": {
+      "start": "node ."
+  },
   "author": "Gabriel Csapo <gacsapo@paypalcorp.com>",
   "license": "ISC",
   "repository": {
