--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "personal website",
   "main": "index.html",
   "scripts": {
-      "start": "node ."
+    "start": "node ."
   },
   "author": "Gabriel Csapo <gacsapo@paypalcorp.com>",
   "license": "ISC",
@@ -16,11 +16,11 @@
     "url": "https://github.com/gabrielcsapo/site/issues"
   },
   "homepage": "https://github.com/gabrielcsapo/site#readme",
-  "dependencies": {},
   "devDependencies": {
-    "jade": "^1.11.0",
     "grunt": "^1.0.1",
     "grunt-contrib-pug": "^1.0.0",
-    "grunt-screenshot": "^0.1.0"
+    "grunt-screenshot": "^0.1.0",
+    "jade": "^1.11.0",
+    "psychic-ui": "0.0.1"
   }
 }
