--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-screenshot": "^0.4.0",
-    "psychic-ui": "0.0.1"
+    "psychic-ui": "^0.2.1"
   }
 }
