--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "grunt dev",
+    "build": "browserify public/index.js -o public/build.js",
     "deploy": "git checkout master;git pull origin master;git checkout gh-pages;git pull origin master;git push origin gh-pages;git checkout master;"
   },
   "author": "Gabriel Csapo <gacsapo@paypalcorp.com>",
@@ -18,12 +19,12 @@
   },
   "homepage": "https://github.com/gabrielcsapo/site#readme",
   "devDependencies": {
+    "d3": "^3.5.11",
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-screenshot": "^0.4.0",
-    "psychic-ui": "^0.2.1"
+    "psychic-ui": "^0.4.0"
   }
 }
