--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "grunt dev",
+    "lint": "./node_modules/.bin/eslint .",
     "build": "browserify public/index.js -o public/build.js"
   },
   "author": "Gabriel Csapo <gacsapo@paypalcorp.com>",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/gabrielcsapo/site#readme",
   "devDependencies": {
     "d3": "^4.4.0",
+    "eslint": "^3.12.2",
     "github-metrics": "^0.2.0",
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
