--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "site",
+  "name": "gabrielcsapo.com",
   "version": "0.0.0",
-  "description": "personal website",
+  "description": "personal website (www.gabrielcsapo.com)",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gabrielcsapo/gabrielcsapo.github.io.git"
@@ -14,17 +14,21 @@
   "license": "ISC",
   "main": "index.html",
   "scripts": {
-    "start": "grunt dev",
     "lint": "eslint .",
-    "build": "grunt build"
+    "build": "webpack",
+    "screenshot": "node ./screenshots/screenshot.js",
+    "dev": "webpack-dev-server ."
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "grunt": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-pug": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-screenshot": "^0.6.0",
-    "psychic-ui": "^1.0.2"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "choo": "^5.6.2",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.0.0",
+    "psychic-ui": "^1.0.7",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
