--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "lint": "eslint .",
     "build": "webpack",
     "screenshot": "node ./screenshots/screenshot.js",
-    "dev": "webpack-dev-server ."
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "choo": "^5.6.2",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.2.0",
-    "html-webpack-plugin": "^2.29.0",
-    "psychic-ui": "^1.0.7",
+    "choo": "^6.0.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "psychic-ui": "^1.0.8",
     "style-loader": "^0.18.2",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.8.2"
   }
 }
