--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,18 @@
 {
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "env": {
       "browser": true,
       "node": true,
       "es6": true
+  },
+  "parserOptions": {
+      "ecmaVersion": 2017,
+      "sourceType": "module",
+      "ecmaFeatures": {
+          "jsx": true
+      }
   }
 }
