--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gabrielcsapo.com",
   "version": "0.0.0",
-  "description": "personal website (www.gabrielcsapo.com)",
+  "description": "☕️ personal website (www.gabrielcsapo.com)",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gabrielcsapo/gabrielcsapo.github.io.git"
@@ -11,24 +12,30 @@
   },
   "homepage": "https://github.com/gabrielcsapo/gabrielcsapo.github.io#readme",
   "author": "Gabriel J. Csapo <gabecsapo@gmail.com>",
-  "license": "ISC",
-  "main": "index.html",
   "scripts": {
     "lint": "eslint .",
-    "build": "webpack",
-    "screenshot": "node ./screenshots/screenshot.js",
+    "test": "node ./screenshots/screenshot.js",
+    "build": "webpack --progress",
     "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "choo": "^6.0.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.7",
     "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.4.0",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
-    "psychic-ui": "^1.0.8",
+    "psychic-ui": "^1.0.7",
+    "puppeteer": "^0.12.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.2"
   }
