--- a/package.json
+++ b/package.json
@@ -30,14 +30,13 @@
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
+    "preact": "^8.2.5",
+    "preact-compat": "^3.17.0",
     "psychic-ui": "^1.0.7",
     "puppeteer": "^0.12.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "^2.9.3"
   }
 }
