--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "build": "NODE_ENV=production webpack --progress",
     "dev": "webpack-dev-server --hot --inline"
   },
+  "engines": {
+    "node": ">= 8"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -29,11 +32,14 @@
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
+    "got": "^7.1.0",
     "html-webpack-plugin": "^2.30.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
+    "prop-types": "^15.6.0",
     "psychic.css": "0.0.1",
     "puppeteer": "^0.12.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.5.6",
