--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "prop-types": "^15.6.0",
     "psychic.css": "0.0.1",
     "puppeteer": "^0.12.0",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
