--- a/package.json
+++ b/package.json
@@ -13,38 +13,15 @@
   "homepage": "https://github.com/gabrielcsapo/gabrielcsapo.github.io#readme",
   "author": "Gabriel J. Csapo <gabecsapo@gmail.com>",
   "scripts": {
-    "lint": "eslint .",
-    "test": "node ./screenshots/screenshot.js",
-    "build": "NODE_ENV=production webpack --progress",
-    "dev": "webpack-dev-server --hot --inline"
+    "build": "sweeney build",
+    "dev": "sweeney serve --watch --port 8080"
   },
   "engines": {
     "node": ">= 8"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
-    "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
-    "font-awesome": "^4.7.0",
     "got": "^7.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "preact": "^8.2.6",
-    "preact-compat": "^3.17.0",
-    "prop-types": "^15.6.0",
     "psychic.css": "0.0.1",
-    "puppeteer": "^0.13.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-router-dom": "^4.2.2",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.9.4"
+    "sweeney": "^0.1.1"
   }
 }
